refactor: 完善各模块功能实现
- 优化 BusinessException 支持错误码
- 完善 GlobalExceptionHandler 全局异常处理
- 优化 Result/PageResult 响应结构
- 完善各模块 Controller 权限控制
- 优化各模块 ServiceImpl 业务逻辑
- 更新 pom.xml 依赖配置
- 完善数据库 schema.sql 表结构
- 优化前端 index.html 标题